# memoire

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  config.json  pyproject.toml  requirements.txt  run.py
.gemini/: settings.json
src/: __init__.py  app.py  logging_config.py
src/config/: __init__.py
src/core/: __init__.py
src/core/embedding/: __init__.py  cache.py  providers.py  service.py
src/core/memory/: __init__.py  analytics.py  anchors.py  contexts.py  fragments.py  health.py  projects.py  search.py  service.py
src/core/storage/: __init__.py  anchor.py  context.py  db.py  fragment.py  manager.py  project.py  search.py  task.py  utils.py
src/gui/customtk/: app.py  overview.py  project_widgets.py  projects.py  utils.py
src/gui/customtk/components/: __init__.py  base.py  utils.py
src/gui/customtk/config/: __init__.py  api_section.py  base.py  chunking_section.py  intelligence_section.py  logging_section.py  processing_section.py  search_section.py  storage_section.py
src/gui/customtk/widgets/: __init__.py  dialogs.py  project_dialogs.py  project_widget.py
src/mcp/intelligence/: __init__.py  chunking.py  contextualization.py  ingestion_curator.py  middleware.py  synthesis.py
src/mcp/server/: __init__.py  cognitive_engine.py  tools.py  unified.py
src/models/: __init__.py
src/tray/: simple_tray.py
