[project]
name = "memoire"
version = "0.1.0"
description = "Semantic memory service for LLMs with modern GUI"
readme = "README.md"
license = {text = "MIT"}
homepage = "https://github.com/fahd-noodleseed/memoire"
repository = "https://github.com/fahd-noodleseed/memoire"
authors = [
    {name = "Memoire Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "qdrant-client>=1.7.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0", 
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "sqlite-utils>=3.34.0",
    "mcp>=1.0.0",
    "google-genai>=1.0.0",
    "customtkinter>=5.2.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0"
]
requires-python = ">=3.11"

[project.scripts]
memoire = "run:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["run.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
